--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 include.path=${php.global.include.path}
 php.version=PHP_53
+project.license=default
+project.licensePath=./nbproject/licenseheader.txt
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
